--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://geoloniamaps.github.io/pwamap/",
+  "homepage": "https://cbtmap.github.io/cbtmap/",
   "eslintConfig": {
     "extends": "react-app"
   },
